[package]
name = "termio"
version = "0.1.0"
authors = ["Konrad Linkowski <linkowski.konrad97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
# clap = "2.33"
clap = {version = "2.33", features = ["yaml"]}

