[package]
name = "termio"
version = "0.1.0"
authors = ["Konrad Linkowski <linkowski.konrad97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
clap = "2.33"
viuer = "0.2"
rust-embed="5.6.0"
yaml-rust = "0.4"
